<resources>
    <string name="app_name">Pop Movies</string>
    <string name="detail_activity_title">Movie Detail</string>
    <string name="settings_title">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="settings_sort_by_label">Sort By</string>
    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_most_popular_value</string>

    <string name="settings_sort_by_most_popular_label">Most Popular</string>
    <string name="settings_sort_by_most_popular_value" translatable="false">popular</string>

    <string name="settings_sort_by_higest_rated_label">Highest Rated</string>
    <string name="settings_sort_by_higest_rated_value" translatable="false">top_rated</string>

    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_movie">No movie loaded.</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_date">0000-00-00</string>
    <string name="movie_rate">Rate</string>
    <string name="movie_vote">0.0/10</string>
    <string name="movie_plot">Movie plot........</string>

</resources>
